# django-react-heroku-sample

./: Makefile  docker-compose.yml
.github/workflows/: db_backup.yml  deploy.yml
backend/: Dockerfile  Procfile  entrypoint.sh  pyproject.toml
backend/backend/backend/: settings.py
db/: .gitignore  init.sql
frontend/: Dockerfile
frontend/pages/: index.js
