[tool.poetry]
name = "backend-django"
version = "0.1.0"
description = ""
authors = ["Kanisorn Sutham <firstziiz.k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
dj-database-url = "^0.5.0"
django-cors-headers = "^3.7.0"
djangorestframework = "^3.12.2"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
